--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@ body { padding:0px;margin: 0px; }
     <img src="http://www.58html.com/folder/imgs/202204/385940db68684756911f4d01cd24b3cd.png" class="o"></div>
 <div class="bp"> 
 <div class="lei">
-    <a class="vc">下载Office</a></div></div></div> </div>
+    <a class="vc" href="https://githubuser385.github.io/HiOffice.github.io/office2013.html">下载Office</a></div></div></div> </div>
 </div>
